client: reduce text size on hike main page to ensure text fits on smaller mobile phones. Add aspect ratio to images on main page to fix bug that pushes content off the screen in mobile view

--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -2,9 +2,9 @@
   letter-spacing: 0.05em;
   display: inline-block;
   display: flex;
-  font-size: 1.5rem;
-  padding-top: 1rem;
+  font-size: 1.4rem;
+  // padding-top: 0.3rem;
   font-style: italic;
-
   justify-content: center;
+  margin-bottom: 0;
 }
